--- a/app/src/main/res/layout/fragment_drinks.xml
+++ b/app/src/main/res/layout/fragment_drinks.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.DrinksFragment">
+    tools:context=".ui.drinks.DrinksFragment">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/text_drinks"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Drinks Fragment"
+        android:text="Order Drinks Here"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
