--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,18 +2,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:id="@+id/navigation_order"
+        android:icon="@drawable/baseline_send_24"
         android:title="Order" />
 
     <item
         android:id="@+id/navigation_food"
-        android:icon="@android:drawable/btn_star_big_on"
+        android:icon="@drawable/order_food_24"
         android:title="Food" />
 
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:id="@+id/navigation_drinks"
+        android:icon="@drawable/baseline_local_cafe_24"
         android:title="Drinks" />
 
 
