* (Vinny and Sean): Coded and Interfaced the drink recycler view and API successfully

--- a/app/src/main/res/layout/drinks_individual_row.xml
+++ b/app/src/main/res/layout/drinks_individual_row.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="Food Name"
+        android:text="Drink Name"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/drinks_picture"
@@ -24,7 +24,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="64dp"
-        android:text="Food Price"
+        android:text="Drink Price"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
