--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -29,5 +30,42 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:navGraph="@navigation/mobile_navigation" />
+
+    <FrameLayout
+        android:id="@+id/receipt_fragment_container"
+        android:layout_width="161dp"
+        android:layout_height="333dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="40dp"
+        android:background="#D64A4A"
+        android:visibility="visible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/nav_host_fragment_activity_main">
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/support_fragment_container"
+        android:layout_width="184dp"
+        android:layout_height="136dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="40dp"
+        android:background="#00BCD4"
+        app:layout_constraintStart_toEndOf="@+id/receipt_fragment_container"
+        app:layout_constraintTop_toTopOf="@+id/nav_host_fragment_activity_main">
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/total_fragment_container"
+        android:layout_width="329dp"
+        android:layout_height="123dp"
+        android:layout_marginBottom="24dp"
+        android:background="#9C27B0"
+        app:layout_constraintBottom_toTopOf="@+id/nav_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
