First attempt at notifications, not working currently

--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -7,9 +7,11 @@
     tools:context=".ui.order.OrderFragment">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/order_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contextClickable="false"
+        android:onClick="order"
         android:text="Order"
         app:layout_constraintEnd_toStartOf="@+id/button2"
         app:layout_constraintHorizontal_bias="0.5"
@@ -23,7 +25,7 @@
         android:text="Pay"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/button"
+        app:layout_constraintStart_toEndOf="@+id/order_button"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />
 
     <androidx.recyclerview.widget.RecyclerView
