--- a/app/src/main/res/layout/payment_screen.xml
+++ b/app/src/main/res/layout/payment_screen.xml
@@ -58,5 +58,12 @@
         android:layout_height="wrap_content"
         android:text="Pay"
         android:layout_marginTop="16dp"/>
+    <Button
+        android:id="@+id/back_pay_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Back"
+        android:layout_margin="10dp">
+    </Button>
 
 </LinearLayout>
